gccida/g1/recog_30
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42009:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = ( rtx)v102; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42016:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = v106; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42017:25: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v107.rtwint = ( __int64)x0->fld[0]; 
                        ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42024:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v109; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42028:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v110 + 8), recog_data_0.operand[2]) ) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42033:25: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v112.rtwint = ( __int64)x0->fld[0]; 
                        ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42040:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v114; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42044:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v115 + 8), recog_data_0.operand[3]) ) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42049:25: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v117.rtwint = ( __int64)x0->fld[0]; 
                        ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42143:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = ( rtx)v102; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42150:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = v120; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42151:25: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v121.rtwint = ( __int64)x0->fld[0]; 
                        ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42158:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v123; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42162:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v124 + 8), recog_data_0.operand[2]) ) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42167:25: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v126.rtwint = ( __int64)x0->fld[0]; 
                        ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42174:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v128; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42178:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v129 + 8), recog_data_0.operand[3]) ) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42183:25: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v131.rtwint = ( __int64)x0->fld[0]; 
                        ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/insn-recog.c:42277:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_30/src/obj/insn-recog.o] Error 1
